@@ -17,6 +17,7 @@
         * [BUGFIX]: Fixed synchronization bug in DbSqlite2 plugin causing random crashes.
         * [BUGFIX]: Views are recreated after table modification only if they really need to be updated according to the table change.
         * [BUGFIX]: Fixed querying selects with numerous subselects with '*' operators for result columns.
+        * [BUGFIX]: #2868 Global configuration directory is not created (even empty) when using portable configuration.
 
 [3.0.5]
         * [ADDED]: #2831 Ported 'Erase table data' feature (in table's context menu) from version 2.1.5.
